# server

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.tmp  CMakeLists.txt  CONTRIBUTING.md  README.md  config.h.in  index.html  openapi.yaml  versions.json
.github/: labeler.yml  release.yml
.github/workflows/: build-and-release.yaml  build-docs.yaml  pr-auto-labeler.yml
5.4.1/: 404.html  index.html  sitemap.xml
5.4.1/CHANGELOG/: index.html
5.4.1/CONTRIBUTING/: index.html
5.4.1/config/: listofequalscrs.txt
5.4.1/documentation/: index.html
5.4.1/html/: AttributionURL_8h.html  Layer_8cpp.html  Layer_8h.html  Layer_8h_source.html  Message_8h.html  Message_8h_source.html  Request_8cpp.html  Request_8h.html  Request_8h.js  Request_8h_source.html  ResponseSender_8cpp.html  ResponseSender_8cpp.js  ResponseSender_8h.html  ResponseSender_8h_source.html  Rok4Server_8h.html  Rok4Server_8h_source.html  ServerConf_8h_source.html  ServiceException_8h.html  ServiceException_8h.js  ServiceException_8h_source.html  Threads_8h_source.html  UtilsTMS_8cpp.html  UtilsWMS_8cpp.html  UtilsXML_8h_source.html  annotated_dup.js  classAttributionURL.js  classEmptyResponseDataStream-members.html  classInfoThread.js  classLayer-members.html  classLayer.html  classLayer.js  classMessageDataSource.js  classMessageDataStream.js  classResponseSender-members.html  classResponseSender.html  classResponseSender.js  classRok4Server-members.html  classSERDataSource.js  classSERDataStream-members.html  classServerConf-members.html  (+21 more)
5.4.1/openapi/: index.html  openapi.yaml
5.5.0/: 404.html  index.html  openapi.yaml  sitemap.xml
5.5.0/CHANGELOG/: index.html
5.5.0/CONTRIBUTING/: index.html
5.5.0/config/: services.json
5.5.0/documentation/: index.html
5.5.0/html/: Message_8cpp.html  Request_8cpp.js  Request_8h.html  Request_8h_source.html  Rok4Server_8cpp.html  Rok4Server_8h_source.html  ServerConf_8h_source.html  ServiceException_8h.html  ServiceException_8h_source.html  ServicesConf_8h_source.html  UtilsGlobal_8cpp.html  UtilsWMTS_8cpp.html  WebService_8h_source.html  annotated.html  classAttributionURL.html  classEmptyResponseDataStream.js  classGetFeatureInfoEncoder-members.html  classGetFeatureInfoEncoder.html  classGetFeatureInfoEncoder.js  classInfoThread-members.html  classLayer.js  classMessageDataStream-members.html  classMetadataURL.html  classMetadataURL.js  classRok4Server.js  classServerConf-members.html  classServiceException-members.html  classServicesConf-members.html  classThreads-members.html  classWebService-members.html  functions.html  functions_func.html  globals.html  main_8cpp.js  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  structWmtsTmsInfos.html
5.5.0/openapi/: index.html
5.5.1/: 404.html  index.html  sitemap.xml
5.5.1/CHANGELOG/: index.html
5.5.1/CONTRIBUTING/: index.html
5.5.1/documentation/: index.html
5.5.1/html/: InfoThread_8h_source.html  Layer_8h_source.html  Message_8cpp.js  Message_8h_source.html  MetadataURL_8h_source.html  ResponseSender_8h.html  Rok4Server_8cpp.html  ServerConf_8h_source.html  ServiceException_8cpp.html  ServiceException_8h.js  Threads_8h_source.html  annotated_dup.js  classEmptyResponseDataStream.html  classInfoThread.html  classMessageDataSource-members.html  classMessageDataSource.html  classMetadataURL-members.html  classRequest-members.html  classResponseSender.html  classRok4Server.html  classServerConf.html  classServerConf.js  classServicesConf.js  classUtilsXML-members.html  classWebService.html  classWebService.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  functions_vars.html  globals_eval.html  globals_func.html  hierarchy.js  main_8cpp.html  navtreeindex0.js  structMemoryStruct-members.html
5.5.1/openapi/: index.html  openapi.yaml
5.5.2/: 404.html  index.html  sitemap.xml
5.5.2/CHANGELOG/: index.html
5.5.2/CONTRIBUTING/: index.html
5.5.2/documentation/: index.html
5.5.2/html/: AttributionURL_8h_source.html  GetFeatureInfoEncoder_8h_source.html  MetadataURL_8h.html  Request_8cpp.html  Request_8h.js  ResponseSender_8cpp.html  ResponseSender_8cpp.js  ResponseSender_8h_source.html  Rok4Server_8cpp.js  Rok4Server_8h.html  Rok4Server_8h_source.html  ServicesConf_8h_source.html  UtilsAdmin_8cpp.html  UtilsOGCTILES_8cpp.html  classAttributionURL-members.html  classLayer-members.html  classLayer.html  classMessageDataStream.html  (+24 more)
6.0.0/: 404.html  index.html  sitemap.xml
6.0.1/: 404.html  index.html  sitemap.xml
6.1.0/: 404.html  index.html  sitemap.xml
6.1.1/: 404.html  index.html  sitemap.xml
6.1.2/: 404.html  index.html  sitemap.xml
6.1.3/: 404.html  index.html  sitemap.xml
6.1.4/: 404.html  index.html  sitemap.xml
6.1.6/: 404.html  index.html  sitemap.xml
6.2.0/: 404.html  index.html  sitemap.xml
6.2.1/: 404.html  index.html  sitemap.xml
7.0.0/: 404.html  index.html  sitemap.xml
config/: layer.schema.json  listofequalscrs.txt  sed_proj.sh  server.default.json  server.json  server.schema.json  services.default.json  services.json  services.schema.json
docker/: debian11.Dockerfile  debian11.centos  docker-entrypoint.sh  server.template.json  services.template.json
docs/: OGC-ogcapi-maps-1-example-1-1.0.0-resolved.yaml  OGC-ogcapi-tiles-1-example-1-1.0.0-resolved.yaml  documentation.md  layer.schema.json  mkdocs.yml  openapi.md  openapi.yaml  requirements.txt
service/: rok4  rok4.service
src/: Attribute.h  AttributionURL.h  ConfLoader.cpp  ConfLoader.h  ContextBook.cpp  ContextBook.h  DataStreams.h  Inspire.cpp  Inspire.h  Layer.cpp  Layer.h  Level.cpp  Level.h  Message.cpp  Message.h  MetadataURL.h  Pyramid.cpp  Pyramid.h  README.md  Request.cpp  Request.h  ResponseSender.cpp  ResponseSender.h  Rok4Server.cpp  Rok4Server.h  ServerConf.cpp  ServerConf.h  ServiceException.cpp  ServiceException.h  ServicesConf.cpp  ServicesConf.h  TileMatrix.cpp  TileMatrix.h  TileMatrixLimits.h  TileMatrixSet.cpp  TileMatrixSet.h  Utils.h  UtilsAdmin.cpp  UtilsGlobal.cpp  UtilsOGCTILES.cpp  (+7 more)
tests/: TimedTestListener.cpp  XmlTimedTestOutputterHook.cpp
(+1377 files in other folders)
